[package]
name = "phasmo-rs"
version = "0.0.1"
authors = ["Thi <swfsql@gmail.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "offline-bin"
path = "src/offline_bin.rs"

[dependencies]
console_error_panic_hook = "0.1.6"
# kurbo = "0.6.2"

[dependencies.wasm-bindgen]
version = "0.2.65"
features = ["serde-serialize"]

[dependencies.druid]
version = "0.6.0"
features = ["im"]

# [dependencies.druid-shell]
# version = "0.6.0"